--- a/styles.css
+++ b/styles.css
@@ -43,21 +43,59 @@ input {
     border-radius: 5px;
     margin-top: 5px;
 }
-
-button {
+.Btn {
+    width: 130px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #b1f202;
+    font-weight: 600;
+    gap: 8px;
+    cursor: pointer;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.103);
+    position: relative;
+    overflow: hidden;
+    transition-duration: .3s;
     color: #000;
     padding: 15px;
-    border: none;
+    border: 2px solid #b1f202;
     border-radius: 5px;
-    cursor: pointer;
     width: 100%;
-    font-size: 15px;
-    font-weight: 600;
+    font-size: 16px;
 }
 
-button:hover {
-    background-color: #82bf00;
+.svgIcon {
+    width: 16px;
+}
+
+.svgIcon path {
+    fill: black;
+}
+
+.Btn::before {
+    width: 100%;
+    height: 130px;
+    position: absolute;
+    content: "";
+    background-color: white;
+    border-radius: 50%;
+    left: -100%;
+    top: 0;
+    transition-duration: .3s;
+    mix-blend-mode: difference;
+    border-radius: 5px;
+}
+
+.Btn:hover::before {
+    transition-duration: .5s;
+    transform: translate(100%, -50%);
+    border-radius: 0;
+}
+
+.Btn:active {
+    transform: translate(5px, 5px);
+    transition-duration: .3s;
 }
 
 h1 {
