--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ h1 {
     color: #b1f202;
 }
 
+
 .result-area {
     margin-left: 30px;
     flex-shrink: 0;
@@ -116,6 +117,7 @@ h1 {
     width: 100%;
     box-shadow: 0 0 20px rgba(110, 242, 2, 0.5);
     border-radius: 10px;
+    text-align: center;
 }
 
 #qrcode {
